--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -34,7 +34,7 @@ set column_ratios 1,5
 set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp)$|^lost\+found$|^__(py)?cache__$
 
 # Show hidden files? You can toggle this by typing 'zh'
-set show_hidden true
+set show_hidden false
 
 # Ask for a confirmation when running the "delete" command?
 # Valid values are "always", "never", "multiple" (default)
@@ -140,7 +140,7 @@ set collapse_preview true
 set save_console_history true
 
 # Draw the status bar on top of the browser window (default: bottom)
-set status_bar_on_top true
+set status_bar_on_top false
 
 # Draw a progress bar in the status bar which displays the average state of all
 # currently running tasks which support progress bars?
@@ -150,13 +150,13 @@ set draw_progress_bar_in_status_bar true
 # Separators are vertical lines between columns.
 # Outline draws a box around all the columns.
 # Both combines the two.
-set draw_borders both
+set draw_borders separators
 
 # Display the directory name in tabs?
 set dirname_in_tabs false
 
 # Enable the mouse support?
-set mouse_enabled true
+set mouse_enabled false
 
 # Display the file size in the main column or status bar?
 set display_size_in_main_column true
@@ -179,14 +179,14 @@ set update_tmux_title true
 set shorten_title 3
 
 # Show hostname in titlebar?
-set hostname_in_titlebar true
+set hostname_in_titlebar false
 
 # Abbreviate $HOME with ~ in the titlebar (first line) of ranger?
 set tilde_in_titlebar false
 
 # How many directory-changes or console-commands should be kept in history?
-set max_history_size 20
-set max_console_history_size 50
+set max_history_size 64
+set max_console_history_size 128
 
 # Try to keep so much space between the top/bottom border when scrolling:
 set scroll_offset 8
@@ -280,7 +280,7 @@ set save_tabs_on_exit false
 
 # Enable scroll wrapping - moving down while on the last item will wrap around to
 # the top and vice versa.
-set wrap_scroll false
+set wrap_scroll true
 
 # Set the global_inode_type_filter to nothing.  Possible options: d, f and l for
 # directories, files and symlinks respectively.
@@ -723,4 +723,5 @@ tmap <delete>   eval -q fm.ui.taskview.task_remove()
 tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
+map DD shell mv %s /home/${USER}/.local/share/Trah/files/
 
