--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -176,8 +176,8 @@ mime ^image/svg, has inkscape, X, flag f = inkscape -- "$@"
 mime ^image/svg, has display,  X, flag f = display -- "$@"
 
 mime ^image, has pqiv,      X, flag f = pqiv -- "$@"
-mime ^image, has sxiv,      X, flag f = sxiv -- "$@"
-mime ^image, has feh,       X, flag f = feh -- "$@"
+mime ^image, has sxiv,      X, flag f = sxiv -a -- "$@"
+mime ^image, has feh,       X, flag f = feh --auto-zoom -- "$@"
 mime ^image, has mirage,    X, flag f = mirage -- "$@"
 mime ^image, has ristretto, X, flag f = ristretto "$@"
 mime ^image, has eog,       X, flag f = eog -- "$@"
