--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -28,7 +28,7 @@ set viewmode miller
 #set viewmode multipane
 
 # How many columns are there, and what are their relative widths?
-set column_ratios 1,5
+set column_ratios 1,4
 
 # Which files should be hidden? (regular expression)
 set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp)$|^lost\+found$|^__(py)?cache__$
@@ -134,7 +134,7 @@ set colorscheme default
 # And collapse (shrink) the last column if there is nothing to preview?
 set preview_files true
 set preview_directories true
-set collapse_preview true
+set collapse_preview false
 
 # Save the console history on exit?
 set save_console_history true
@@ -159,7 +159,7 @@ set dirname_in_tabs false
 set mouse_enabled false
 
 # Display the file size in the main column or status bar?
-set display_size_in_main_column true
+set display_size_in_main_column false
 set display_size_in_status_bar true
 
 # Display the free disk space in the status bar?
@@ -176,7 +176,7 @@ set update_tmux_title true
 
 # Shorten the title if it gets long?  The number defines how many
 # directories are displayed at once, 0 turns off this feature.
-set shorten_title 3
+set shorten_title 2
 
 # Show hostname in titlebar?
 set hostname_in_titlebar false
