--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -338,6 +338,7 @@ ext x?html?, has links,             terminal = links "$@"
 ext x?html?, has lynx,              terminal = lynx -- "$@"
 ext x?html?, has w3m,               terminal = w3m "$@"
 
+ext tex, has pdftex, X, flag f = pdftex "--output-directory=../ $@"
 #-------------------------------------------
 # Misc
 #-------------------------------------------
@@ -353,6 +354,7 @@ ext s[wmf]c, has snes9x-gtk,X = snes9x-gtk "$1"
 ext nes, has fceux, X         = fceux "$1"
 ext exe                       = wine "$1"
 name ^[mM]akefile$            = make
+
 
 #--------------------------------------------
 # Code
