--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -85,7 +85,7 @@ ext x?html?, has w3m,               terminal = w3m "$@"
 # Misc
 #-------------------------------------------
 # Define the "editor" for text files as first action
-mime ^text,  label editor = ${VISUAL:-$EDITOR} -- "$@"
+mime ^text,  label editor = nohup urxvt -e ${VISUAL:-$EDITOR} $@ >/dev/null &
 mime ^text,  label pager  = "$PAGER" -- "$@"
 !mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php = ${VISUAL:-$EDITOR} -- "$@"
 !mime ^text, label pager,  ext xml|json|csv|tex|py|pl|rb|js|sh|php = "$PAGER" -- "$@"
@@ -343,7 +343,7 @@ ext tex, has pdftex, X, flag f = pdftex "--output-directory=../ $@"
 # Misc
 #-------------------------------------------
 # Define the "editor" for text files as first action
-mime ^text,  label editor = ${VISUAL:-$EDITOR} -- "$@"
+mime ^text,  label editor = nohup urxvt -e ${VISUAL:-$EDITOR} $@ >/dev/null &
 mime ^text,  label pager  = "$PAGER" -- "$@"
 !mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php = ${VISUAL:-$EDITOR} -- "$@"
 !mime ^text, label pager,  ext xml|json|csv|tex|py|pl|rb|js|sh|php = "$PAGER" -- "$@"
