--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -87,7 +87,7 @@ ext x?html?, has w3m,               terminal = w3m "$@"
 # Define the "editor" for text files as first action
 mime ^text,  label editor = nohup urxvt -e ${VISUAL:-$EDITOR} $@ >/dev/null &
 mime ^text,  label pager  = "$PAGER" -- "$@"
-!mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php = ${VISUAL:-$EDITOR} -- "$@"
+!mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php = nohup urxvt -e ${VISUAL:-$EDITOR} $@ >/dev/null &
 !mime ^text, label pager,  ext xml|json|csv|tex|py|pl|rb|js|sh|php = "$PAGER" -- "$@"
 
 ext 1                         = man "$1"
@@ -110,7 +110,8 @@ ext php = php -- "$1"
 #--------------------------------------------
 # Audio without X
 #-------------------------------------------
-mime ^audio|ogg$, terminal, has mpv      = mpv -- "$@"
+mime ^audio|ogg$, terminal, has mpv      = nohup urxvt -e mpv "$@" >/dev/null &
+#mime ^audio|ogg$, terminal, has mpv      = mpv -- "$@"
 mime ^audio|ogg$, terminal, has mplayer2 = mplayer2 -- "$@"
 mime ^audio|ogg$, terminal, has mplayer  = mplayer -- "$@"
 ext midi?,        terminal, has wildmidi = wildmidi -- "$@"
@@ -345,7 +346,8 @@ ext tex, has pdftex, X, flag f = pdftex "--output-directory=../ $@"
 # Define the "editor" for text files as first action
 mime ^text,  label editor = nohup urxvt -e ${VISUAL:-$EDITOR} $@ >/dev/null &
 mime ^text,  label pager  = "$PAGER" -- "$@"
-!mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php = ${VISUAL:-$EDITOR} -- "$@"
+!mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php = nohup urxvt -e ${VISUAL:-$EDITOR} $@ >/dev/null &
+#!mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php = ${VISUAL:-$EDITOR} -- "$@"
 !mime ^text, label pager,  ext xml|json|csv|tex|py|pl|rb|js|sh|php = "$PAGER" -- "$@"
 
 ext 1                         = man "$1"
